<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F0F0F0" >
        
        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/DeleteAll"
            android:visibility="gone"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_callmissandall"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/allcall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/allcall"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/misscall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/calldismiss"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="12dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/edit"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15dp" />
        
        <TextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/finish"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15dp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/records"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollingCache="false"
        android:animationCache="false"
        android:background="#FFFFFF"
        android:divider="@drawable/recordslist_divider"
        android:dividerHeight="0.5dp" >

    </ListView>

</LinearLayout>