<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="bottom">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
        android:background="@drawable/shape_dialpad_pop">

        <TextView
            android:id="@+id/addnew"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/addnewContacts"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16dp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="5dp"
            android:background="@android:color/holo_blue_light"/>
        
        <TextView
            android:id="@+id/addExisted"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/addExisted"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16dp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="5dp"
            android:background="@android:color/holo_blue_light"/>
        
        <TextView
            android:id="@+id/sendMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/sendMessage"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:background="@drawable/shape_dialpad_pop"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>